[package]
name = "radon"
author= ["Akshit <akshitv18@gmail.com>"]
version = "0.0.1"
edition = "2018"

[dependencies]
# mongodb = "2.0.0"
# tokio = "1.0.0"
# async_once = "0.2.1"
dotenv = "0.15.0"
serde = "1.0.130"
lazy_static = "1.4.0"
rocket = "0.5.0-rc.1"
juniper = "0.15.7"
juniper_rocket = "0.8.0"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["sync"]
